# ludka

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  run_worker.py
app/api/v1/: api.py  auth.py  poker.py
app/core/: config.py  logging.py  metrics.py  middleware.py
app/core/langgraph/: graph.py
app/core/prompts/: __init__.py  poker_dealer.md  poker_player.md
app/models/: base.py  session.py  user.py
app/schemas/: __init__.py  chat.py  poker.py
app/services/: __init__.py  broker.py  database.py  factory.py  llm.py  poker.py  worker.py
app/utils/: auth.py  graph.py  sanitization.py
evals/: evaluator.py  helpers.py  main.py
evals/metrics/: __init__.py
scripts/: build-docker.sh  docker-entrypoint.sh  set_env.sh
