[project]
name = "langgraph-fastapi-template"
version = "0.1.0"
description = "LangGraph FastAPI Template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-openai>=1.0.2",
    "langfuse==3.9.1",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-postgres>=3.0.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.1",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "structlog>=25.2.0",
    "supabase>=2.15.0",
    "uvicorn>=0.34.0",
    "bcrypt>=4.3.0",
    "slowapi>=0.1.9",
    "email-validator>=2.2.0",
    "prometheus-client>=0.19.0",
    "starlette-prometheus>=0.7.0",
    "asgiref>=3.8.1",
    "duckduckgo-search>=3.9.0",
    "langchain-community>=0.4.1",
    "tqdm>=4.67.1",
    "colorama>=0.4.6",
    "ddgs>=9.6.0",
    "tenacity>=9.1.2",
    "mem0ai>=1.0.0",
    "uvloop>=0.22.1",
    "gigachat>=0.2.0",
    "ruff>=0.11.4",
    "aio-pika>=9.5.8",
    "pre-commit>=4.5.1",
]

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "ruff", "djlint==1.36.4"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.11.4",
    "types-python-jose>=3.5.0.20250531",
]
test = ["httpx>=0.28.1", "pytest>=8.3.5"]


[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.black]
line-length = 119
exclude = "venv|migrations"

[tool.flake8]
docstring-convention = "all"
ignore = ["D107", "D212", "E501", "W503", "W605", "D203", "D100"]
exclude = "venv|migrations"
max-line-length = 119

# radon
radon-max-cc = 10

[tool.isort]
profile = "black"
multi_line_output = "VERTICAL_HANGING_INDENT"
force_grid_wrap = 2
line_length = 119
skip = ["migrations", "venv"]

[tool.pylint."messages control"]
disable = [
    "line-too-long",
    "trailing-whitespace",
    "missing-function-docstring",
    "consider-using-f-string",
    "import-error",
    "too-few-public-methods",
    "redefined-outer-name",
]

[tool.pylint.master]
ignore = "migrations"

[tool.ruff]
# Общие настройки
line-length = 120
target-version = "py312"

extend-exclude = [
    ".venv",
    "venv",
    "env",
    "virtualenv",
    "site-packages",
    "dist",
    "build",
]

[tool.ruff.lint]
# Самый мощный набор правил
select = [
    "F",       # Pyflakes (ошибки)
    "E", "W",  # pycodestyle (стиль PEP8)
    "I",       # isort (сортировка импортов)
    "N",       # pep8-naming (имена переменных/классов)
    "UP",      # pyupgrade (современный синтаксис)
    "B",       # flake8-bugbear (поиск багов)
    "SIM",     # flake8-simplify (упрощение кода)
    "PTH",     # flake8-use-pathlib (замена os.path на pathlib)
    "RUF",     # специфичные правила самого Ruff
    "ASYNC",   # проверки для асинхронного кода
]
ignore = [
    "PTH100", # abspath
    "PTH118", # join
    "PTH120", # dirname
    "PTH123", # open
    "PTH103",
    "RUF003",
    "RUF001",
    "RUF002",
    "PTH113",
]

# Настройки по конкретным файлам
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # игнорировать неиспользуемые импорты в инитах
"tests/*" = ["S101"]    # разрешить assert в тестах

[tool.ruff.lint.flake8-bugbear]
# Разрешаем вызывать Depends и Query в аргументах
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query"]

[tool.ruff.format]
# Настройки форматтера (аналог Black)
quote-style = "double"
indent-style = "space"
docstring-code-format = true # форматировать код внутри докстрингов!

